apps/flight-school/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-school
  namespace: flight-school
  labels:
    app: flight-school

spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight-school

  template:
    metadata:
      labels:
        app: flight-school

    spec:
      containers:
        - name: flight-school
          image: &image ghcr.io/cdriehuys/flight-school:v0.2.0
          ports:
            - containerPort: 8000
              name: http
