apps/flight-school/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flight-school-ingress
  namespace: flight-school

spec:
  rules:
    - host: &host flight-school.proxy2.lan.qidux.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flight-school
                port:
                  name: http

  tls:
    - hosts:
        - *host
      secretName: lan-wildcard-tls
